--- a/MobileMiner/app/src/main/res/values/strings.xml
+++ b/MobileMiner/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Silentarmy</string>
+    <string name="app_name">MobileMiner</string>
     <string name="title_activity_live_feature">LiveFeatureActivity</string>
     <string name="iDesc">NV21 Decoding</string>
     <string name="eDesc">Decoding+Laplacian</string>
