[update] code clean

--- a/MobileMiner/app/接入文档.md
+++ b/MobileMiner/app/接入文档.md
@@ -5,7 +5,7 @@ title : MobileMiner SDK文档
 #介绍
 商业化 Android SDK 文档
 
-MobileMiner目前提供了Xmr、Xmc挖矿工具。
+MobileMiner目前提供了Xmr挖矿工具。
 
 MobileMiner SDK是一套挖矿开发调用接口 , 开发者可以轻松在自己的Android应用中加入挖矿相关的功能。
  
