[update] 接入文档更新；温控参数调整

--- a/MobileMiner/v1.0.0接入文档.md
+++ b/MobileMiner/v1.0.0接入文档.md
@@ -57,6 +57,12 @@ XmrMiner.instance().setContext(context)
 XmrMiner.instance().stopMine(); 
 ```
 
+是否正在挖矿：
+
+```
+XmrMiner.instance().isMining(); 
+```
+
 
 设置挖矿最大CPU温度（必须在startMine()函数之前调用，默认为65℃）：
 
@@ -122,6 +128,22 @@ XmrMiner.instance().getCurrentTemperature()
         <td>无</td>
         <td>void</td>
         <td>停止挖矿，会杀掉挖矿进程，释放资源</td>
+    </tr>
+</table>
+
+###### isMining()
+<table>
+    <tr>
+        <td>参数名</td>
+        <td>参数类型</td>
+        <td>返回类型</td>
+        <td>说明</td>
+    </tr>
+    <tr>
+        <td>无</td>
+        <td>无</td>
+        <td>boolean</td>
+        <td>是否正在挖矿中，true 是 | false 否</td>
     </tr>
 </table>
 
