[update] 数据统计功能1

--- a/MobileMiner/v1.0.0接入文档.md
+++ b/MobileMiner/v1.0.0接入文档.md
@@ -46,7 +46,7 @@ ndk {
 开始挖矿：
 
 ```
-XmrMiner.instance().setContext(context)
+XmrMiner.instance().init(context)
 		 .setStateObserver(new StateObserver(){})
 		 .startMine(); 
 ```
@@ -147,7 +147,7 @@ XmrMiner.instance().getCurrentTemperature()
     </tr>
 </table>
 
-###### setContext()
+###### init()
 <table>
     <tr>
         <td>参数名</td>
@@ -159,7 +159,7 @@ XmrMiner.instance().getCurrentTemperature()
         <td>context</td>
         <td>Context</td>
         <td>CommonMinerInterface</td>
-        <td>设置上下文对象</td>
+        <td>初始化</td>
     </tr>
 </table>
 
