--- a/MobileMiner/v1.0.0接入文档.md
+++ b/MobileMiner/v1.0.0接入文档.md
@@ -9,6 +9,7 @@ Waterhole手机挖矿SDK，目前提供了门罗币（Monero, 代号XMR）的挖
 
 #### 1. 在app主模块的build.gradle中添加挖矿aar引用
 ```
+compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
 compile(name: 'miner-core-1.0.0', ext: 'aar')
 compile(name: 'miner-xmr-1.0.0', ext: 'aar')
 ```
@@ -29,6 +30,9 @@ ndk {
 
 ```
 <uses-permission android:name="android.permission.INTERNET"/>
+<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+<uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
 ```
 注意：SDK内部不做权限处理，交由接入方来处理。
 
@@ -43,6 +47,12 @@ ndk {
 
 <br />
 #### 5. 接入代码
+
+在Application初始化Miner：
+
+```
+AbstractMiner.initApplication(this);
+```
 
 开始挖矿：
 
@@ -81,7 +91,26 @@ XmrMiner.instance().getCurrentTemperature()
 <br />
 #### 6. API说明
 
-##### 6.1 class XmrMiner
+##### 6.1 class AbstractMiner
+
+###### initApplication()
+
+<table>
+    <tr>
+        <td>参数名</td>
+        <td>参数类型</td>
+        <td>返回类型</td>
+        <td>说明</td>
+    </tr>
+    <tr>
+        <td>application</td>
+        <td>Application</td>
+        <td>void</td>
+        <td>初始化挖矿数据</td>
+    </tr>
+</table>
+
+##### 6.2 class XmrMiner
 
 ###### instance()
 
@@ -313,7 +342,7 @@ XmrMiner.instance().getCurrentTemperature()
     </tr>
 </table>
 
-##### 6.2 class CommonMinerInterface
+##### 6.3 class CommonMinerInterface
 各个挖矿币的统一接口，接入方无需了解。
 
 <br />
