--- a/MobileMiner/v1.0.0接入文档.md
+++ b/MobileMiner/v1.0.0接入文档.md
@@ -124,7 +124,7 @@ XmrMiner.instance().getCurrentTemperature()
     <tr>
         <td>无</td>
         <td>无</td>
-        <td>CommonMinerInterface</td>
+        <td>MinerInterface</td>
         <td>获取XmrMiner实例（单例）</td>
     </tr>
 </table>
@@ -188,7 +188,7 @@ XmrMiner.instance().getCurrentTemperature()
     <tr>
         <td>context</td>
         <td>Context</td>
-        <td>CommonMinerInterface</td>
+        <td>MinerInterface</td>
         <td>初始化</td>
     </tr>
 </table>
@@ -204,7 +204,7 @@ XmrMiner.instance().getCurrentTemperature()
     <tr>
         <td>stateObserver</td>
         <td>StateObserver</td>
-        <td>CommonMinerInterface</td>
+        <td>MinerInterface</td>
         <td>挖矿状态观察者回调</td>
     </tr>
 </table>
@@ -220,7 +220,7 @@ XmrMiner.instance().getCurrentTemperature()
     <tr>
         <td>maxTemperature</td>
         <td>int</td>
-        <td>CommonMinerInterface</td>
+        <td>MinerInterface</td>
         <td>设置挖矿最大CPU温度，默认为65℃，必须在startMine()函数之前调用</td>
     </tr>
 </table>
@@ -342,7 +342,7 @@ XmrMiner.instance().getCurrentTemperature()
     </tr>
 </table>
 
-##### 6.3 class CommonMinerInterface
+##### 6.3 class MinerInterface
 各个挖矿币的统一接口，接入方无需了解。
 
 <br />
