--- a/MobileMiner/v1.0.0接入文档.md
+++ b/MobileMiner/v1.0.0接入文档.md
@@ -51,7 +51,7 @@ ndk {
 在Application初始化Miner：
 
 ```
-AbstractMiner.initApplication(this);
+XmrMiner.initApplication(this);
 ```
 
 开始挖矿：
@@ -91,10 +91,9 @@ XmrMiner.instance().getCurrentTemperature()
 <br />
 #### 6. API说明
 
-##### 6.1 class AbstractMiner
+##### 6.1 class XmrMiner
 
 ###### initApplication()
-
 <table>
     <tr>
         <td>参数名</td>
@@ -110,10 +109,7 @@ XmrMiner.instance().getCurrentTemperature()
     </tr>
 </table>
 
-##### 6.2 class XmrMiner
-
 ###### instance()
-
 <table>
     <tr>
         <td>参数名</td>
