--- a/MobileMiner/v1.0.0接入文档.md
+++ b/MobileMiner/v1.0.0接入文档.md
@@ -51,7 +51,7 @@ ndk {
 在Application初始化Miner：
 
 ```
-XmrMiner.initApplication(this);
+WaterholeMiner.initApplication(this);
 ```
 
 开始挖矿：
@@ -91,7 +91,7 @@ XmrMiner.instance().getCurrentTemperature()
 <br />
 #### 6. API说明
 
-##### 6.1 class XmrMiner
+##### 6.1 class WaterholeMiner
 
 ###### initApplication()
 <table>
@@ -109,6 +109,8 @@ XmrMiner.instance().getCurrentTemperature()
     </tr>
 </table>
 
+##### 6.2 class XmrMiner
+
 ###### instance()
 <table>
     <tr>
@@ -122,6 +124,22 @@ XmrMiner.instance().getCurrentTemperature()
         <td>无</td>
         <td>MinerInterface</td>
         <td>获取XmrMiner实例（单例）</td>
+    </tr>
+</table>
+
+###### init()
+<table>
+    <tr>
+        <td>参数名</td>
+        <td>参数类型</td>
+        <td>返回类型</td>
+        <td>说明</td>
+    </tr>
+    <tr>
+        <td>context</td>
+        <td>Context</td>
+        <td>MinerInterface</td>
+        <td>初始化</td>
     </tr>
 </table>
 
@@ -170,22 +188,6 @@ XmrMiner.instance().getCurrentTemperature()
         <td>无</td>
         <td>boolean</td>
         <td>是否正在挖矿中，true 是 | false 否</td>
-    </tr>
-</table>
-
-###### init()
-<table>
-    <tr>
-        <td>参数名</td>
-        <td>参数类型</td>
-        <td>返回类型</td>
-        <td>说明</td>
-    </tr>
-    <tr>
-        <td>context</td>
-        <td>Context</td>
-        <td>MinerInterface</td>
-        <td>初始化</td>
     </tr>
 </table>
 
@@ -238,7 +240,7 @@ XmrMiner.instance().getCurrentTemperature()
 </table>
 
 <br />
-##### 6.2 class StateObserver
+##### 6.3 class StateObserver
 
 ###### onConnectPoolBegin()
 <table>
@@ -338,7 +340,7 @@ XmrMiner.instance().getCurrentTemperature()
     </tr>
 </table>
 
-##### 6.3 class MinerInterface
+##### 6.4 class MinerInterface
 各个挖矿币的统一接口，接入方无需了解。
 
 <br />
