--- a/MobileMiner/v1.0.0接入文档.md
+++ b/MobileMiner/v1.0.0接入文档.md
@@ -51,6 +51,7 @@ ndk {
 在Application初始化Miner：
 
 ```
+WaterholeMiner.enableLog(true);
 WaterholeMiner.initApplication(this);
 ```
 
@@ -92,6 +93,22 @@ XmrMiner.instance().getCurrentTemperature()
 #### 6. API说明
 
 ##### 6.1 class WaterholeMiner
+
+###### enableLog()
+<table>
+    <tr>
+        <td>参数名</td>
+        <td>参数类型</td>
+        <td>返回类型</td>
+        <td>说明</td>
+    </tr>
+    <tr>
+        <td>enable</td>
+        <td>boolean</td>
+        <td>void</td>
+        <td>是否开启日志打印，默认为true</td>
+    </tr>
+</table>
 
 ###### initApplication()
 <table>
