[update] 增加32位设备的支持

--- a/MobileMiner/v1.0.0接入文档.md
+++ b/MobileMiner/v1.0.0接入文档.md
@@ -2,7 +2,7 @@
 <br />
 ### SDK介绍
 
-Waterhole手机挖矿SDK，目前提供了门罗币（Monero, 代号XMR）的挖矿支持。目前门罗币手机挖矿只支持64位的运行环境，支持的ABI为arm64-v8a。连接的矿池为Waterhole公司矿池，内置钱包地址为Waterhole公司门罗地址，第三方开源代码抽水为0%。
+Waterhole手机挖矿SDK，目前提供了门罗币（Monero, 代号XMR）的挖矿支持。目前门罗币手机挖矿支持32位和64位的运行环境，支持的ABI为armeabi, armeabi-v7a, arm64-v8a。连接的矿池为Waterhole公司矿池，内置钱包地址为Waterhole公司门罗地址，第三方开源代码抽水为0%。
 
 <br />
 ### 快速集成
@@ -18,11 +18,11 @@ compile(name: 'miner-xmr-1.0.0', ext: 'aar')
 #### 2. 在app主模块的build.gradle中设置NDK ABI参数
 ```
 ndk {
-       abiFilters "armeabi", "armeabi-v7a", "arm64-v8a", "x86", "mips"
+       abiFilters "armeabi", "armeabi-v7a", "arm64-v8a"
     }
 ```
 
- 注意：由于目前门罗算法在arm平台下，只支持64位，32位存在内存对齐问题。所以在gradle中设置abi，是为了app在运行时能够优先选择arm64-v8a。如果app内部使用了其他so库，则必须有对应的arm64-v8a目录，否则应用不会以64位的环境运行。如果有个别的库没有arm64-v8a包的话，则运行时，使用对应功能会crash。
+ 注意：在gradle中设置abi，是为了SDK在运行时能够优先选择arm64-v8a。虽然目前SDK支持armeabi, armeabi-v7a, arm64-v8a，但是64位的arm64-v8a挖矿速度比32位的arm快20%-30%，所以优先适配arm64-v8a，如果实在不能适配（适配arm64-v8a的话，需要app中其他的库也有对应的arm64-v8a库），则SDK会选择32位的arm环境运行。
 
 <br />
 #### 3. 权限
