--- a/MobileMiner/v1.0.0接入文档.md
+++ b/MobileMiner/v1.0.0接入文档.md
@@ -9,7 +9,6 @@ Waterhole手机挖矿SDK，目前提供了门罗币（Monero, 代号XMR）的挖
 
 #### 1. 在app主模块的build.gradle中添加挖矿aar引用
 ```
-compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
 compile(name: 'miner-core-1.0.0', ext: 'aar')
 compile(name: 'miner-xmr-1.0.0', ext: 'aar')
 ```
@@ -29,10 +28,12 @@ ndk {
 打开AndroidManifest.xml，添加组件需要的权限：
 
 ```
-<uses-permission android:name="android.permission.INTERNET"/>
-<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
-<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-<uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
+  <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+  <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+  <uses-permission android:name="android.permission.INTERNET" />
+  <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+  <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+  <uses-permission android:name="android.permission.WAKE_LOCK" />
 ```
 注意：SDK内部不做权限处理，交由接入方来处理。
 
